fix: #103853 修复课程商品页切换教学计划导致学习目录混乱

--- a/app/Resources/views/goods/show.html.twig
+++ b/app/Resources/views/goods/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% do script(['libs/jquery-countdown.js', 'app/js/goods/show/index.js', 'app/js/courseset/show/tasks/index.js']) %}
+{% do script(['libs/jquery-countdown.js', 'app/js/goods/show/index.js']) %}
 
 {% block title %}{{ goods.title|raw }} - {{ parent() }}{% endblock %}
 {% block full_content %}
