feat: #240424 pc端仅限app中间页的修改

--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -30,7 +30,7 @@
 <div class="modal-guide flex justify-center items-center">
   <img class="mobile-wechat-qrcode" src="{{ asset('static-dist/app/img/task/wechat-qrcode.png') }}" alt="" />
   <div class="flex flex-col items-start ml8">
-  <span>打开微信</span>
+  <span>使用手机</span>
   <span>扫一扫</span>
   </div>
 </div>
