feat: #240424 pc端中间页图片调整

--- a/app/Resources/views/mobile/download-middle-page.html.twig
+++ b/app/Resources/views/mobile/download-middle-page.html.twig
@@ -11,7 +11,7 @@
       .download-middle-page{
         width: 100vw;
         height: 100vh;
-        background-image:url("/static-dist/app/img/task/app-middle-page-background copy.png ");
+        background-image:url("/static-dist/app/img/task/middle-page-image.png ");
         background-size: contain;
         background-repeat: no-repeat;
        }
