fix: #104311 修复班级课程页面点击课时，提示计划不存在

--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block body %}
+  <input type="hidden" name="courseId" value="{{ courseId }}">
   <div>
   <div class="modal-intro">
     <span>
