--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -6,7 +6,7 @@
 {% set modal_class = 'cd-modal-dialog task-only-app-modal' %}
 
 {% block title %}
-  扫码下载
+  仅支持 APP 学习
 {% endblock %}
 
 {% block body %}
@@ -15,8 +15,8 @@
     <span>
       请下载 /
     </span>
-    <span class="modal-app">打开App</span>
-    <span>后学习</span>
+    <span class="modal-app">打开APP</span>
+    <span>后继续学习</span>
   </div>
   <div class="download-app">
     <div class="download-app-qrcode">
