--- a/app/Resources/views/classroom-manage/member/set-deadline-modal.html.twig
+++ b/app/Resources/views/classroom-manage/member/set-deadline-modal.html.twig
@@ -6,7 +6,7 @@
 {% block title %}{{'classroom.edit_expiry_mode'|trans}}{% endblock %}
 {% block body %}
 
-<form id="expiryday-set-form" class="form-horizontal" method="post" action="{{ path('classroom_manage_member_deadline', { classroomId: classroom.id, userIds: userIds }) }}">
+<form id="expiryday-set-form" class="form-horizontal" method="post" action="{{ path('classroom_manage_member_deadline', { classroomId: classroom.id, userIds: userIds, all: all|default() }) }}">
   {% if classroom.status == 'published' %}
     <div class="row form-group">
       <div class="col-sm-2 control-label width-100">
