--- a/app/Resources/views/course-manage/student/set-deadline-modal.html.twig
+++ b/app/Resources/views/course-manage/student/set-deadline-modal.html.twig
@@ -4,7 +4,7 @@
 {% do script(['libs/jquery-validation.js', 'libs/bootstrap-datetimepicker.js', 'app/js/course-manage/student-expiryday/index.js'])%}
 
 {% block body %}
-<form id="deadline-set-form" class="form-horizontal" method="post" action="{{ path('course_set_manage_course_students_deadline_batch', { courseSetId: course.courseSetId, courseId:course.id, ids:ids }) }}">
+<form id="deadline-set-form" class="form-horizontal" method="post" action="{{ path('course_set_manage_course_students_deadline_batch', { courseSetId: course.courseSetId, courseId:course.id, ids:ids, all: all|default() }) }}">
   {% if course.status == 'published' %}
     <div class="row form-group">
       <div class="col-sm-2 control-label">
@@ -57,7 +57,6 @@
     <div class="empty">{{dict_text('courseStatus', course.status)}}{{'course.members_manage.official_student.add_expiry_day.failed_tips'|trans}}{{ 'site.default.student'|trans }} {{'course.members_manage.official_student.add_expiry_day.publish_tips'|trans}}</div>
   {% endif %}
   <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
-  <input type="hidden" name="all" value="{{ all|default('') }}">
 </form>
 {% endblock %}
 
