--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -14,9 +14,9 @@
   <div>
   <div class="modal-intro">
     <span>
-      请下载 /
+      请下载 / 打开 
     </span>
-    <span class="modal-app">打开APP</span>
+    <span class="modal-app">APP</span>
     <span>后继续学习</span>
   </div>
   <div class="download-app">
