--- a/app/Resources/views/mobile/download-middle-page.html.twig
+++ b/app/Resources/views/mobile/download-middle-page.html.twig
@@ -114,25 +114,23 @@
     <div class="download-middle-page">
        <div class="middle-page-top">
          <h1 class="middle-page-top-name">{{site.name}}</h1>
-         <div class="middle-page-top-message">把学校装进口袋</div>
+         <div class="middle-page-top-message">{{ 'mobile.middle_page.top'|trans }}</div>
        </div>
        <div class="middle-page-footer">
         {% set domain_without_protocol = site.url|split('://')|last %}
         {% set domain_protocol = site.url|split('://')|first %}
 
-        <a href="kuozhi://{{ domain_without_protocol }}?protocol={{domain_protocol}}&courseId={{ courseId }}&goodsId={{ goodsId }}" class="middle-open-app js-open-app">点击打开</a>
-        <a href="javascript:;" class="middle-open-app js-open-app2">点击打开</a>
+        <a href="kuozhi://{{ domain_without_protocol }}?protocol={{domain_protocol}}&courseId={{ courseId }}&goodsId={{ goodsId }}" class="middle-open-app js-open-app">{{ 'mobile.middle_page.open'|trans }}</a>
+        <a href="javascript:;" class="middle-open-app js-open-app2">{{ 'mobile.middle_page.open'|trans }}</a>
 
-        <a href="{{ site.url }}/mapi_v2/School/getDownloadUrl?from=qrcode&code=zhixiang" class="middle-download-app">下载APP</a>
+        <a href="{{ site.url }}/mapi_v2/School/getDownloadUrl?from=qrcode&code=zhixiang" class="middle-download-app">{{ 'mobile.app_download_btn'|trans }}</a>
        </div>
     </div>
     <div class="open-browser-container js-open-app-container">
         <div class="open-browser-overlay"></div>
         <div class="open-browser-dialog">
             <div class="open-browser-message">
-                点击右上角...
-                在"浏览器中打开"
-                继续跳转
+               {{ 'mobile.middle_page.browser'|trans }}
             </div>
            <img class="mobile-wechat-qrcode" src="{{ asset('/static-dist/app/img/mobile/open-browse.png') }}" alt="" class="open-browser-image"/>
         </div>
