--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -6,7 +6,7 @@
 {% set modal_class = 'cd-modal-dialog task-only-app-modal' %}
 
 {% block title %}
-  仅支持 APP 学习
+  {{ 'task.app_modal.title'|trans}}
 {% endblock %}
 
 {% block body %}
@@ -14,10 +14,10 @@
   <div>
   <div class="modal-intro">
     <span>
-      请下载 / 打开 
+      {{ 'task.app_modal.intro'|trans }} 
     </span>
-    <span class="modal-app">APP</span>
-    <span>后继续学习</span>
+    <span class="modal-app">{{ 'task.app_modal.app'|trans }}</span>
+    <span>{{ 'task.app_modal.learning'|trans }}</span>
   </div>
   <div class="download-app">
     <div class="download-app-qrcode">
@@ -31,8 +31,8 @@
 <div class="modal-guide flex justify-center items-center">
   <img class="mobile-wechat-qrcode" src="{{ asset('static-dist/app/img/task/wechat-qrcode.png') }}" alt="" />
   <div class="flex flex-col items-start ml8">
-  <span>使用手机</span>
-  <span>扫一扫</span>
+  <span>{{ 'task.app_modal.use'|trans }}</span>
+  <span>{{ 'task.app_modal.sweep'|trans }}</span>
   </div>
 </div>
 {% endblock %}
