--- a/app/Resources/views/question-bank/question/index.html.twig
+++ b/app/Resources/views/question-bank/question/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'question-bank/question/layout.html.twig' %}
 {% do script(['libs/select2.js', 'libs/jquery-intro.js' , 'app/js/question-bank/question/index.js' , 'app/js/question-bank/list-header/index.js'])  %}
 
-
 {% block container %}
   <div class="panel panel-default panel-col">
     <div class="panel-body question-list-container js-question-container">
@@ -17,6 +16,7 @@
       <input type="hidden" name="accessCloud" value="{{ cloudStatus() }}">
       <input type="hidden" name="canManageCloud" value="{{ has_permission('admin_v2_cloud_center') }}">
       <input type="hidden" name="introModalUrl" value="{{ path('question_bank_manage_import_intro') }}">
+      <input type="hidden" name="aiAnalysisIntroUrl" value="{{ path('question_bank_manage_ai_analysis_intro') }}">
     </div>
     <a class="js-skip-btn hidden" target="_blank" href="{{ path('admin_v2_app_center') }}">{{ 'item_bank.access_cloud'|trans }}</a>
   </div>
