feat: #240525 pc端ai解析功能完善

--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -185,3 +185,4 @@
 @import "page/teaching.less";
 @import "page/testpaper-score.less";
 @import 'page/class/class-detail-main-color.less';
+@import 'page/question-bank/ai-analysis-intro-modal.less';
