--- a/app/Resources/static-src/app/less/admin-v2.less
+++ b/app/Resources/static-src/app/less/admin-v2.less
@@ -37,3 +37,4 @@
 @import 'admin-v2/page/audit-center.less';
 @import 'admin-v2/page/sensitive.less';
 @import 'admin-v2/page/theme.less';
+@import 'admin-v2/page/ai-analysis.less';
