--- a/app/Resources/views/admin-v2/teach/question-ai-analysis/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/question-ai-analysis/index.html.twig
@@ -42,13 +42,12 @@
   {% else %}
     <div class="ai-problem-analysis">
       <h2 class="ai-analysis-title">
-       <span class="analysis-title-left">{{ 'admin_v2.question.ai_analysis.Upgrade'|trans }}</span>
-       <span class="analysis-title-right">
+        <span class="analysis-title-left">{{ 'admin_v2.question.ai_analysis.Upgrade'|trans }}</span>
+        <span class="analysis-title-right">
          {{ 'admin_v2.question.ai_analysis.experience'|trans }}
-         <img src="/static-dist/app/img/admin-v2/ai-analysis.png" class="analysis-image">  
+         <img src="{{ asset('static-dist/app/img/admin-v2/ai-analysis.png') }}" alt="" class="analysis-image">
          {{ 'admin_v2.question.ai_analysis.problem'|trans }}
        </span>
-       
       </h2>
       <p class="ai-analysis-text">{{ 'admin_v2.question.ai_analysis.tittle'|trans }}</p>
       <a href="{{ path('admin_v2_my_cloud_overview') }}" class="upgrades">{{ 'admin_v2.question.ai_analysis.upgrade_now'|trans }}</a>
