--- a/app/Resources/views/question-manage/re-edit.html.twig
+++ b/app/Resources/views/question-manage/re-edit.html.twig
@@ -36,6 +36,7 @@
   <input type="hidden" name="jquery_path" value="{{ asset('static-dist/libs/jquery/dist/jquery.min.js') }}">
   <input type="hidden" name="ckeditor_image_upload_url" value="{{ path('editor_upload', {token:upload_token('course')}) }}">
   <input type="hidden" name="ckeditor_image_download_url" value="{{ path('editor_download', {token:upload_token('course')}) }}">
+  <input type="hidden" name="ai_analysis_enable" value="{{ setting('question_ai_analysis.teacher_enabled', 0) }}">
   <input type="hidden" name="saveUrl" value="
     {% if type == 'item' %}
       {{ path('questions_import_save', {token: app.request.get('token'), categoryId: categoryId}) }}
